fixed tasting-card spacing in regards to how low the edit and delete buttons are by increasing bottom margin 10 80px

--- a/react-app/src/components/LovedTastingCard/lovedTastingCard.css
+++ b/react-app/src/components/LovedTastingCard/lovedTastingCard.css
@@ -1,6 +1,6 @@
-.wine-main-info.loved-main {
+/* .wine-main-info.loved-main {
   border-bottom: 1px solid black;
-}
+} */
 
 .fa-circle.red {
   color: rgba(176, 0, 32, .7);
@@ -35,12 +35,17 @@
   color: rgba(252, 237, 214, .5);
 }
 
+.loved_wine_tasting_info {
+  color: rgba(252, 237, 214, .5);
+}
+
 .user_info_container {
   display: flex;
   flex-direction: column;
-  padding-bottom: 10px;
+  padding: 20px;
   margin: 20px 0;
-  height: 110px;
+  height: 120px;
+  border-top: 1px solid black;
 }
 
 .profile_cheers_container {
